ffi: use java-16 to call strerro, open, openat